fixed spacing for better readability, fixed total amount not resetting after paying and some styling

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,21 @@
-body{
+body {
     text-align: center;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgb(25, 17, 161) 0%, rgb(62, 62, 219) 35%, rgba(0,212,255,1) 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(
+        90deg,
+        rgb(25, 17, 161) 0%,
+        rgb(62, 62, 219) 35%,
+        rgba(0, 212, 255, 1) 100%
+    );
     font-family: Arial, Helvetica, sans-serif;
 }
-.container{
+.container {
     display: grid;
     grid-template-columns: auto auto auto auto;
     gap: 25px;
 }
-.card{
+.card {
+    background-color: #00d5ff65;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -20,40 +26,70 @@ body{
     box-shadow: 0 2px 2px 0 rgb(63, 63, 63);
     border-radius: 8px;
 }
-.titleContainer{
+.titleContainer {
     height: 50px;
 }
-.descContainer{
+.descContainer {
     height: 80px;
 }
-.image{
+.image {
     object-fit: cover;
     width: 250px;
     height: 150px;
     box-shadow: 0 2px 2px 0 rgb(63, 63, 63);
     border-radius: 8px;
 }
-.buttonContainer{
+.buttonContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-.buttonContainer>*{
+.buttonContainer > * {
     padding: 10px;
     margin: 10px;
 }
-#warenkorb{
-    visibility:hidden;
-    background-color: aqua;
-    top:0;
-    right: 0;
+#warenkorbBtn {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+}
+.warenkorbWrap {
+    padding: 0;
+    margin: 0;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+#warenkorb {
+    background-color: #ffffffd0;
+    visibility: hidden;
+    top: 0;
     position: fixed;
     height: 100vh;
-    width: 50vw;
+    width: 100vw;
 }
-.item{
+.item {
     display: flex;
     font-size: 1rem;
     width: 50%;
     justify-content: space-around;
+}
+
+@media screen and (max-width: 1200px) {
+    .container {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 25px;
+    }
+}
+@media screen and (max-width: 900px) {
+    .container {
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+}
+@media screen and (max-width: 600px) {
+    .container {
+        display: block;
+    }
 }
